# security-action

./: .dockerignore  .gitignore  Dockerfile  PROTOTYPE.md  README.md  action.yml  cli.py  entrypoint.sh  plan.md  pyproject.toml  requirements.txt
.agents/skills/security-action-rollout/: SKILL.md
.gemini/: GEMINI.md
.gemini/commands/security-action/: gate.toml  report.toml  rollout.toml
.github/workflows/: security-check-self-hosted.yaml  security-check.yaml
.roo/rules/: 40-security-action-rollout.md
config/: example.security-action.yml  gitleaks.toml
config/semgrep-rules/: .gitkeep
scripts/: run_action.py  sync-agent-skills.sh  test_local.sh
skills/security-action-rollout/agents/: openai.yaml
skills/security-action-rollout/references/: workflow-recipes.md
src/: cli.py  main.py
src/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
src/config/: __init__.py  false_positives.py  loader.py
src/reporters/: __init__.py  github_reporter.py  sarif_reporter.py
src/scanners/: __init__.py  base.py  code_scanner.py  container_scanner.py  dependency_scanner.py  iac_scanner.py  native_audit_scanner.py  parallel.py  sbom_generator.py  secret_scanner.py  sonar_scanner.py
tests/: conftest.py  test_agent.py  test_cli.py  test_code_scanner.py  test_config.py  test_container_scanner.py  test_dependency_scanner.py  test_iac_scanner.py  test_main.py  test_native_audit_scanner.py  test_reporters.py  test_sbom_generator.py  test_scanner_timeouts.py  test_scanners.py  test_skill_render_workflow.py  test_sonar_scanner.py
(+9 files in other folders)
